only use latest version of the image

--- a/server/infra/k8s/event-bus-depl.yaml
+++ b/server/infra/k8s/event-bus-depl.yaml
@@ -14,4 +14,4 @@ spec:
     spec:
       containers:
         - name: event-bus
-          image: blogs/event-bus:0.0.1
+          image: blogs/event-bus
