--- a/server/infra/k8s/posts-depl.yaml
+++ b/server/infra/k8s/posts-depl.yaml
@@ -14,4 +14,5 @@ spec:
     spec:
       containers:
         - name: posts
-          image: blogs/posts:0.0.1
+          image: blogs/posts
+          imagePullPolicy: Never
