k8s deployment of services

--- a/server/infra/k8s/event-bus-depl.yaml
+++ b/server/infra/k8s/event-bus-depl.yaml
@@ -14,8 +14,8 @@ spec:
     spec:
       containers:
         - name: event-bus
-          image: blogs/event-bus
-          imagePullPolicy: Never
+          image: blogs/event-bus:0.0.1
+          imagePullPolicy: IfNotPresent
 
 ---
 apiVersion: v1
