--- a/server/infra/k8s/comments-depl.yaml
+++ b/server/infra/k8s/comments-depl.yaml
@@ -15,7 +15,7 @@ spec:
       containers:
         - name: comments
           image: blogs/comments
-          imagePullPolicy: Never
+          imagePullPolicy: IfNotPresent
 
 ---
 apiVersion: v1
