--- a/server/comments/package.json
+++ b/server/comments/package.json
@@ -13,7 +13,12 @@
     "axios": "^0.20.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "@opentelemetry/api": "1.7.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "0.48.0",
+    "@opentelemetry/sdk-node": "0.48.0",
+    "@opentelemetry/sdk-metrics": "1.21.0"
+ 
   },
   "type": "module"
 }
