--- a/server/moderation/package.json
+++ b/server/moderation/package.json
@@ -12,7 +12,12 @@
   "dependencies": {
     "axios": "^0.21.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "@opentelemetry/api": "1.7.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "0.48.0",
+    "@opentelemetry/sdk-node": "0.48.0",
+    "@opentelemetry/sdk-metrics": "1.21.0"
+ 
   },
   "type": "module"
 }
