--- a/server/query/package.json
+++ b/server/query/package.json
@@ -10,6 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@opentelemetry/api": "1.7.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.55.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "0.48.0",
+    "@opentelemetry/id-generator-aws-xray": "^1.2.2",
+    "@opentelemetry/otlp-exporter-base": "^0.57.0",
+    "@opentelemetry/sdk-metrics": "1.21.0",
+    "@opentelemetry/sdk-node": "0.48.0",
+    "@opentelemetry/semantic-conventions": "^1.28.0",
     "axios": "^0.21.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
